# MRI2FE

./: .gitignore  .gitmodules  .readthedocs.yaml  404.html  CITATION.cff  CMakeLists.txt  LICENSE  MANIFEST.in  index.html  install_linux.sh  install_mac.sh  install_mac_linux.sh  install_windows.bat  mkdocs.yaml  noxfile.py  objects.inv  pyproject.toml  readme.md  refs.bib  requirements.txt  setup.cfg  setup.py  sitemap.xml  vcpkg.json
.github/workflows/: build-pdf.yml  build-wheels.yml  build-whls.yml  docs.yml  format-lint.yml  github-actions-demo.yml  github-actions.yml
api/: index.html
codes/: create_test_data.py  test.py  test_with_generated_data.py
contributing/: index.html
docs/: api.md  contributing.md  examples.md  index.md  mesh.md  model.md  mre.md  quickstart.md  user-guide.md
docs/api/: core.md  mre.md  output.md  utilities.md
docs/development/: contributing.md
docs/examples/: basic-workflow.md  mre-integration.md
docs/getting-started/: installation.md  quick-start.md
docs/user-guide/: io.md  meshing.md  model-creation.md
include/: io.hpp  meshing.hpp  meshing_core.hpp
paper/: paper.md  references.bib
quickstart/: index.html
search/: search_index.json
src/MRI2FE/: MRE_coregistration.py  MRE_mapping.py  __init__.py  calculate_prony.py  d3_to_nifti.py  generate_mesh.py  k_file_operations.py  mnc_to_nifti.py  utilities.py
src/MRI2FE/FEModel/: __init__.py  femodel.py  lspost.cfile  lspost.msg  output_model.k  test_generate_kfile.py
src/MRI2FE/MRE/: MRE_coregistration.py  MRE_mapping.py  __init__.py  calculate_prony.py  shear_lsr.jl
src/MRI2FE/Meshing/: __init__.py  generate_mesh.py  niftiToMesh.py
src/MRI2FE/Pipelines/: __init__.py  new_model.py  process_nifti.py
src/MRI2FE/Postprocess/: __init__.py  calculate_strain.py  d3_to_nifti.py
src/MRI2FE/models/: femodel.py
src/MRI2FE/output/: fea_exporters.py  k_file_operations.py
src/cpp/: io.cpp  meshing.cpp  meshing_core.cpp
test/: CMakeLists.txt  Test_MRE_coregistration.py  Test_Postprocess_calculate_strain.py  Test_meshing.cpp  Test_utilities.py  create_test_data.py  generate_test_niftis.py  test_calculate_prony.py  test_fea_exporters.py  test_pipeline_with_generated_data.py
test/Meshing/: Test_surfacemesh.py
test/python/: Test_MRE_coregistration.py  Test_Postprocess_calculate_strain.py  Test_calculate_prony.py  Test_meshing.py  Test_utilities.py  generate_kfile.py  test_fea_exporters.py  test_from_meshio.py
